clusters/raspberry/workloads/jlpt-dojo/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jlpt-dojo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jlpt-dojo-frontend
  template:
    metadata:
      labels:
        app: jlpt-dojo-frontend
    spec:
      containers:
        - name: jlpt-dojo-frontend
          image: gendos123/jlpt-dojo-frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerhub-cred
