clusters/raspberry/workloads/jlpt-dojo/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jlpt-dojo-frontend
spec:
  selector:
    app: jlpt-dojo-frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32002
